<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="0.3dp"
                android:layout_height="@dimen/tab_height"
                android:background="@color/blue_light" />

            <FrameLayout
                android:id="@+id/viewLocalFilm"
                android:layout_width="0dp"
                android:layout_height="@dimen/tab_height"
                android:layout_weight="25" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/my_films"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <View
                    android:id="@+id/tabIndicatorviewLocalFilm"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/tab_indicator_height"
                    android:layout_gravity="bottom"
                    android:background="@color/blue_light" />
            </FrameLayout>

            <View
                android:layout_width="0.3dp"
                android:layout_height="@dimen/tab_height"
                android:background="@color/blue_light" />

            <FrameLayout
                android:id="@+id/viewYoutubeFilms"
                android:layout_width="0dp"
                android:layout_height="@dimen/tab_height"
                android:layout_weight="25" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/youtube_videos"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <View
                    android:id="@+id/tabIndicatorYoutubeFilms"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/tab_indicator_height"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent" />
            </FrameLayout>

            <View
                android:layout_width="0.3dp"
                android:layout_height="@dimen/tab_height"
                android:background="@color/blue_light" />

            <FrameLayout
                android:id="@+id/viewBookmark"
                android:layout_width="0dp"
                android:layout_height="@dimen/tab_height"
                android:layout_weight="25" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/bookmar_tab"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <View
                    android:id="@+id/tabIndicatorBookmark"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/tab_indicator_height"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent" />
            </FrameLayout>

            <View
                android:layout_width="0.3dp"
                android:layout_height="@dimen/tab_height"
                android:background="@color/blue_light" />

            <FrameLayout
                android:id="@+id/viewDownload"
                android:layout_width="0dp"
                android:layout_height="@dimen/tab_height"
                android:layout_weight="25" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/download_tab"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <View
                    android:id="@+id/tabIndicatorDownload"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/tab_indicator_height"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent" />
            </FrameLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line01" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100" />

        <RelativeLayout
            android:id="@+id/viewHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_small"
            android:visibility="visible" >

            <FrameLayout
                android:id="@+id/dumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small" >

                <SurfaceView
                    android:id="@+id/svVideoPlayer"
                    android:layout_width="@dimen/history_video_width"
                    android:layout_height="@dimen/history_video_height" >
                </SurfaceView>

                <Button
                    android:id="@+id/btnPlayOrPause"
                    android:layout_width="@dimen/controller_btn_size"
                    android:layout_height="@dimen/controller_btn_size"
                    android:layout_gravity="center"
                    android:background="@drawable/selector_controller_pause" />
            </FrameLayout>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="@dimen/download_size"
                android:layout_height="@dimen/download_size"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_normal"
                android:background="@drawable/selector_close"
                android:textSize="@dimen/text_size_normal" />

            <Button
                android:id="@+id/btnBookmarkHistory"
                android:layout_width="@dimen/book_mark_size"
                android:layout_height="@dimen/book_mark_size"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_toLeftOf="@id/btnCancel"
                android:background="@drawable/selector_bookmarks" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_toLeftOf="@id/btnBookmarkHistory"
                android:layout_toRightOf="@id/dumb"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvFilmName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <!-- The navigation drawer -->

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="@dimen/navigation_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/nav_background"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="left"
            android:text="@string/category_label"
            android:textColor="@color/gray_light" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/margin_small_xx"
            android:background="@drawable/line01" />

        <ListView
            android:id="@+id/listCategory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_weight="100"
            android:divider="@drawable/line01"
            android:dividerHeight="0.3dp" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>